# Artic-project

./: README.md  model_summary.txt  pyproject.toml
dataset/: land_mask.npy
dataset/osisaf/: osisaf_19790101.npy  osisaf_19790103.npy  osisaf_19790104.npy  osisaf_19790105.npy  osisaf_19790106.npy  osisaf_19790107.npy  osisaf_19790108.npy  osisaf_19790109.npy  osisaf_19790110.npy  osisaf_19790111.npy  osisaf_19790112.npy  osisaf_19790113.npy  osisaf_19790114.npy  osisaf_19790115.npy  osisaf_19790116.npy  osisaf_19790117.npy  osisaf_19790118.npy  osisaf_19790119.npy  osisaf_19790120.npy  osisaf_19790121.npy  osisaf_19790122.npy  osisaf_19790123.npy  osisaf_19790124.npy  osisaf_19790125.npy  osisaf_19790126.npy  osisaf_19790127.npy  osisaf_19790128.npy  osisaf_19790129.npy  osisaf_19790130.npy  osisaf_19790131.npy  osisaf_19790201.npy  osisaf_19790202.npy  osisaf_19790203.npy  osisaf_19790204.npy  osisaf_19790205.npy  osisaf_19790206.npy  osisaf_19790207.npy  osisaf_19790208.npy  osisaf_19790209.npy  osisaf_19790210.npy  (+15300 more)
mlruns/0/: meta.yaml
mlruns/0/32526a35e6c84122882da88f28949371/: meta.yaml
mlruns/0/4a02179d272348f1a6d969e7c6f0d1d1/: meta.yaml
mlruns/0/56e96bd9e41e4e2f848d3b5445471d4a/: meta.yaml
mlruns/0/78bba4f18ced4de8b372947eb1364498/: meta.yaml
mlruns/190836171040393040/: meta.yaml
mlruns/197988100719066675/: meta.yaml
mlruns/481099135687968271/: meta.yaml
src/data/: data_prepare.py  dataset_arctic.py
src/models/: baseline.py
src/notebooks/: exp_arch.ipynb
src/utils/: visualization.py
tests/: test_classes.ipynb  test_model.py
(+151 files in other folders)
